--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,46 @@
+html {
+    font-size: 62.5%;
+    font-family: 'Kumbh Sans', sans-serif;
+    box-sizing: border-box;
+}
 
+main {
+    background-color: hsl(210, 46%, 95%);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.comment-1{
+    background-color: hsl(263, 55%, 52%);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.comment-2{
+    background-color: hsl(217, 19%, 35%);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.comment-3{
+    background-color: hsl(0, 0%, 100%);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.comment-4{
+    background-color: hsl(219, 29%, 14%);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.comment-5{
+    background-color: hsl(0, 0%, 100%);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
